# nova-orchestrator

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
.data/: jobs.sqlite3
.github/workflows/: ci.yml
.venv-ci/: pyvenv.cfg
nova_orchestrator/: __init__.py  api.py  models.py  service.py  store.py  worker.py
nova_orchestrator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_jobs.py
web/: index.html  package-lock.json  package.json  tsconfig.json
web/src/: App.tsx  api.ts  styles.css  types.ts
web/src/lib/: status.ts
web/test/: status.test.ts
